# beijing-car-quota-draw-mcp

./: .gitignore  README.md  pyproject.toml
src/bjhjyd_mcp/: __init__.py  main.py
src/bjhjyd_mcp/analysis/: __init__.py  analyzer.py
src/bjhjyd_mcp/models/: __init__.py  quota_result.py
src/bjhjyd_mcp/parsers/: __init__.py  pdf_parser.py
src/bjhjyd_mcp/scrapers/: __init__.py  policy_scraper.py  web_scraper.py
src/bjhjyd_mcp/server/: __init__.py  mcp_server.py
src/bjhjyd_mcp/storage/: __init__.py  data_store.py
src/bjhjyd_mcp/utils/: __init__.py  celebration_generator.py  logging_config.py
src/tests/: __init__.py
src/tests/unit/: __init__.py  test_pdf_parser.py
